--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -50,6 +50,16 @@
                value="org.eclipse.team.core.repository=org.eclipse.egit.core.GitProvider">
          </filter>
          <action
+               class="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitAction"
+               id="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitAction"
+               label="%ReplaceWithCommitAction_label"
+               menubarPath="replaceWithMenu/gitReplaceWithGroup2"/>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.ReplaceWithRefAction"
+               id="org.eclipse.egit.ui.internal.actions.ReplaceWithRefAction"
+               label="%ReplaceWithRefAction_label"
+               menubarPath="replaceWithMenu/gitReplaceWithGroup2"/>
+         <action
                class="org.eclipse.egit.ui.internal.actions.ApplyPatchAction"
                definitionId="org.eclipse.egit.ui.team.ApplyPatch"
                enablesFor="*"
@@ -2218,24 +2228,6 @@
          </class>
          <activeWhen>
             <test property="GitSelection.resourcesAllInRepository" args="isSafe" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.ReplaceWithCommit">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitActionHandler">
-         </class>
-         <activeWhen>
-            <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.ReplaceWithRef">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.ReplaceWithRefActionHandler">
-         </class>
-         <activeWhen>
-            <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
          </activeWhen>
       </handler>
    </extension>
@@ -4791,19 +4783,41 @@
             allPopups="false"
             locationURI="popup:replaceWithMenu?after=gitReplaceWithGroup2">
          <command
-               commandId="org.eclipse.egit.ui.team.ReplaceWithRef"
-               label="%ReplaceWithRefAction_label"
-               style="push">
-            <visibleWhen checkEnabled="false">
-               <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
-            </visibleWhen>
-         </command>
-         <command
                commandId="org.eclipse.egit.ui.team.ReplaceWithCommit"
                label="%ReplaceWithCommitAction_label"
                style="push">
-            <visibleWhen checkEnabled="false">
-               <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.ReplaceWithRef"
+               label="%ReplaceWithRefAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
             </visibleWhen>
          </command>
       </menuContribution>
@@ -5610,11 +5624,13 @@
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitActionHandler"
             id="org.eclipse.egit.ui.team.ReplaceWithCommit"
             name="%ReplaceWithCommitCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.ReplaceWithRefActionHandler"
             id="org.eclipse.egit.ui.team.ReplaceWithRef"
             name="%ReplaceWithRefCommand.name">
       </command>
