First commited as after_84459_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -85,7 +85,7 @@ SharingWizard_windowTitle=Configure Git Repository
 SharingWizard_failed=Failed to initialize Git team provider.
 SharingWizard_MoveProjectActionLabel=Move Project
 ShowBlameHandler_errorMessage=Showing annotations failed
-ShowBlameHandler_JobName=Computing Blame Annotations
+ShowBlameHandler_JobName=Computing Revision Information
 
 GenerateHistoryJob_errorComputingHistory=Cannot compute Git history.
 GenerateHistoryJob_taskFoundMultipleCommits=Found {0} commits
@@ -227,7 +227,7 @@ GitHistoryPage_pushCommit=&Push Commit...
 GitHistoryPage_ShowSubMenuLabel=&Show
 GitHistoryPage_toggleEmailAddresses=&E-mail Addresses
 GitPreferenceRoot_automaticallyEnableChangesetModel=Automatically enable commit &grouping in Git synchronizations
-GitPreferenceRoot_BlameGroupHeader=Blame Annotations
+GitPreferenceRoot_BlameGroupHeader=Revision Information
 GitPreferenceRoot_BlameIgnoreWhitespaceLabel=Ignore whitespace changes
 GitPreferenceRoot_fetchBeforeSynchronization=Always launch fetch before synchronization
 GitPreferenceRoot_CloningRepoGroupHeader=Cloning repositories
