First commited as after_84539_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1045,6 +1045,7 @@ CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
 CommittingPreferencePage_autoStageDeletion=Automatically stage files being deleted
+CommittingPreferencePage_autoStageMoves=Automatically stage files being moved
 CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
 CommittingPreferencePage_general=General
 
