--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -50,6 +50,45 @@
                value="org.eclipse.team.core.repository=org.eclipse.egit.core.GitProvider">
          </filter>
          <action
+               class="org.eclipse.egit.ui.internal.actions.CompareWithCommitAction"
+               id="org.eclipse.egit.ui.internal.actions.CompareWithCommitAction"
+               label="%CompareWithCommitAction.label"
+               menubarPath="compareWithMenu/gitCompareWithGroup2">
+         </action>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.CompareWithRefAction"
+               id="org.eclipse.egit.ui.internal.actions.CompareWithRefAction"
+               label="%CompareWithBranchOrTagAction.label"
+               menubarPath="compareWithMenu/gitCompareWithGroup2">
+         </action>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousAction"
+               enablesFor="1"
+               id="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousAction"
+               label="%replaceWithPreviousVersionAction.label"
+               menubarPath="replaceWithMenu/gitReplaceWithGroup">
+         </action>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.DiscardChangesAction"
+               id="org.eclipse.egit.ui.internal.actions.DiscardChangesAction"
+               label="%DiscardChangesAction_label"
+               menubarPath="replaceWithMenu/gitReplaceWithGroup"/>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.ReplaceWithHeadAction"
+               id="org.eclipse.egit.ui.internal.actions.ReplaceWithHeadAction"
+               label="%ReplaceWithHeadAction_label"
+               menubarPath="replaceWithMenu/gitReplaceWithGroup"/>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitAction"
+               id="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitAction"
+               label="%ReplaceWithCommitAction_label"
+               menubarPath="replaceWithMenu/gitReplaceWithGroup2"/>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.ReplaceWithRefAction"
+               id="org.eclipse.egit.ui.internal.actions.ReplaceWithRefAction"
+               label="%ReplaceWithRefAction_label"
+               menubarPath="replaceWithMenu/gitReplaceWithGroup2"/>
+         <action
                class="org.eclipse.egit.ui.internal.actions.ApplyPatchAction"
                definitionId="org.eclipse.egit.ui.team.ApplyPatch"
                enablesFor="*"
@@ -2129,10 +2168,7 @@
                class="org.eclipse.egit.ui.internal.actions.CompareWithHeadActionHandler">
          </class>
          <activeWhen>
-            <and>
-               <test property="GitSelection.selectionSingleRepository" />
-               <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
-            </and>
+            <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
          </activeWhen>
       </handler>
       <handler
@@ -2141,10 +2177,7 @@
                class="org.eclipse.egit.ui.internal.actions.CompareWithIndexActionHandler">
          </class>
          <activeWhen>
-            <and>
-               <test property="GitSelection.selectionSingleRepository" />
-               <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
-            </and>
+            <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
          </activeWhen>
       </handler>
       <handler
@@ -2169,73 +2202,6 @@
                <count value="1" />
                <test property="org.eclipse.egit.ui.resources.ResourceState.hasTrackedResources" />
             </and>
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.CompareWithCommit">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.CompareWithCommitActionHandler">
-         </class>
-         <activeWhen>
-            <reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.CompareWithRef">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.CompareWithRefActionHandler">
-         </class>
-         <activeWhen>
-            <reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.ReplaceWithPrevious">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousActionHandler">
-         </class>
-         <activeWhen>
-            <and>
-               <count value="1" />
-               <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
-               <test property="org.eclipse.egit.ui.resources.ResourceState.hasTrackedResources" />
-            </and>
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.Discard">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.DiscardChangesActionHandler">
-         </class>
-         <activeWhen>
-            <test property="GitSelection.resourcesAllInRepository" args="isSafe" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.ReplaceWithHead">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.ReplaceWithHeadActionHandler">
-         </class>
-         <activeWhen>
-            <test property="GitSelection.resourcesAllInRepository" args="isSafe" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.ReplaceWithCommit">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitActionHandler">
-         </class>
-         <activeWhen>
-            <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
-         </activeWhen>
-      </handler>
-      <handler
-            commandId="org.eclipse.egit.ui.team.ReplaceWithRef">
-         <class
-               class="org.eclipse.egit.ui.internal.actions.ReplaceWithRefActionHandler">
-         </class>
-         <activeWhen>
-            <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
          </activeWhen>
       </handler>
    </extension>
@@ -4709,10 +4675,7 @@
                label="%CompareWithHeadAction_label"
                style="push">
             <visibleWhen checkEnabled="false">
-               <and>
-                  <test property="GitSelection.selectionSingleRepository" />
-                  <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
-               </and>
+               <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
             </visibleWhen>
          </command>
          <command
@@ -4720,10 +4683,7 @@
                label="%CompareWithIndexAction_label"
                style="push">
             <visibleWhen checkEnabled="false">
-               <and>
-                  <test property="GitSelection.selectionSingleRepository" />
-                  <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
-               </and>
+               <test property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources" />
             </visibleWhen>
          </command>
          <command
@@ -4743,19 +4703,41 @@
             allPopups="false"
             locationURI="popup:compareWithMenu?after=gitCompareWithGroup2">
          <command
-               commandId="org.eclipse.egit.ui.team.CompareWithRef"
-               label="%CompareWithBranchOrTagAction.label"
-               style="push">
-            <visibleWhen checkEnabled="false">
-               <reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
-            </visibleWhen>
-         </command>
-         <command
                commandId="org.eclipse.egit.ui.team.CompareWithCommit"
                label="%CompareWithCommitAction.label"
                style="push">
-            <visibleWhen checkEnabled="false">
-               <reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.CompareWithRevision"
+               label="%CompareWithBranchOrTagAction.label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
             </visibleWhen>
          </command>
       </menuContribution>
@@ -4763,26 +4745,59 @@
             allPopups="false"
             locationURI="popup:replaceWithMenu?after=gitReplaceWithGroup">
          <command
-               commandId="org.eclipse.egit.ui.team.ReplaceWithHead"
-               label="%ReplaceWithHeadAction_label"
+               commandId="org.eclipse.egit.ui.team.ReplaceWithPrevious"
+               label="%replaceWithPreviousVersionAction.label"
                style="push">
-            <visibleWhen checkEnabled="true" />
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
+            </visibleWhen>
          </command>
          <command
                commandId="org.eclipse.egit.ui.team.Discard"
                label="%DiscardChangesAction_label"
                style="push">
-            <visibleWhen checkEnabled="true" />
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
+            </visibleWhen>
          </command>
          <command
-               commandId="org.eclipse.egit.ui.team.ReplaceWithPrevious"
-               label="%ReplaceWithPreviousVersionAction.label"
+               commandId="org.eclipse.egit.ui.team.ReplaceWithHead"
+               label="%ReplaceWithHeadAction_label"
                style="push">
-            <visibleWhen checkEnabled="false">
+            <visibleWhen
+                  checkEnabled="false">
                <and>
-                  <count value="1" />
-                  <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
-                  <test property="org.eclipse.egit.ui.resources.ResourceState.hasTrackedResources" />
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
                </and>
             </visibleWhen>
          </command>
@@ -4791,19 +4806,41 @@
             allPopups="false"
             locationURI="popup:replaceWithMenu?after=gitReplaceWithGroup2">
          <command
-               commandId="org.eclipse.egit.ui.team.ReplaceWithRef"
-               label="%ReplaceWithRefAction_label"
-               style="push">
-            <visibleWhen checkEnabled="false">
-               <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
-            </visibleWhen>
-         </command>
-         <command
                commandId="org.eclipse.egit.ui.team.ReplaceWithCommit"
                label="%ReplaceWithCommitAction_label"
                style="push">
-            <visibleWhen checkEnabled="false">
-               <test property="GitSelection.resourcesSingleRepository" args="isSafe" />
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="org.eclipse.egit.ui.team.ReplaceWithRef"
+               label="%ReplaceWithRefAction_label"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.egitOnlyResourceMapping">
+                  </reference>
+                  <reference
+                        definitionId="org.eclipse.egit.ui.resourcesAllInRepository">
+                  </reference>
+               </and>
             </visibleWhen>
          </command>
       </menuContribution>
@@ -4855,18 +4892,6 @@
                   name="gitReplaceWithGroup2"
                   visible="true">
             </separator>
-            <visibleWhen>
-               <with variable="activeMenu">
-                  <not>
-                     <iterate operator="or">
-                        <or>
-                           <equals value="#AbstractTextEditorRulerContext" />
-                           <equals value="#OverviewRulerContext" />
-                        </or>
-                     </iterate>
-                  </not>
-               </with>
-            </visibleWhen>
          </menu>
       </menuContribution>
    </extension>
@@ -5431,7 +5456,7 @@
             class="org.eclipse.egit.ui.internal.selection.SelectionPropertyTester"
             id="org.eclipse.egit.ui.SelectionTester"
             namespace="GitSelection"
-            properties="projectsSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository,selectionSingleRepository"
+            properties="projectsSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository"
             type="java.util.Collection">
       </propertyTester>
       <propertyTester
@@ -5590,36 +5615,43 @@
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
-            id="org.eclipse.egit.ui.team.CompareWithRef"
+            id="org.eclipse.egit.ui.team.CompareWithRevision"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.CompareWithRefActionHandler"
             name="%CompareWithHistoryCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.CompareWithCommitActionHandler"
             id="org.eclipse.egit.ui.team.CompareWithCommit"
             name="%CompareWithCommitCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.DiscardChangesActionHandler"
             id="org.eclipse.egit.ui.team.Discard"
             name="%ReplaceWithIndexCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.ReplaceWithHeadActionHandler"
             id="org.eclipse.egit.ui.team.ReplaceWithHead"
             name="%ReplaceWithHeadCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.ReplaceWithCommitActionHandler"
             id="org.eclipse.egit.ui.team.ReplaceWithCommit"
             name="%ReplaceWithCommitCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.ReplaceWithRefActionHandler"
             id="org.eclipse.egit.ui.team.ReplaceWithRef"
             name="%ReplaceWithRefCommand.name">
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
+            defaultHandler="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousActionHandler"
             id="org.eclipse.egit.ui.team.ReplaceWithPrevious"
             name="%ReplaceWithPreviousCommand.name">
       </command>
@@ -5981,21 +6013,11 @@
          point="org.eclipse.ui.editors">
       <editor
             class="org.eclipse.egit.ui.internal.commit.CommitEditor"
-            contributorClass="org.eclipse.egit.ui.internal.commit.CommitEditorActionBarContributor"
             default="false"
             icon="icons/obj16/changelog_obj.gif"
             id="org.eclipse.egit.ui.commitEditor"
             name="%CommitEditor.name">
       </editor>
-   </extension>
-   <extension
-         point="org.eclipse.ui.actionSetPartAssociations">
-      <actionSetPartAssociation
-            targetID="org.eclipse.ui.edit.text.actionSet.presentation">
-         <part
-               id="org.eclipse.egit.ui.commitEditor">
-         </part>
-      </actionSetPartAssociation>
    </extension>
    <extension
          point="org.eclipse.ui.editors.templates">
