--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -74,9 +74,7 @@ WizardProjectsImportPage_projectsInWorkspace = Some or all projects cannot be im
 WizardProjectsImportPage_CreateProjectsTask = Creating Projects
 WizardProjectsImportPage_filterText = type filter text to filter unselected projects
 
-SecureStoreUtils_errorClearingCredentials=Failed to clear credentials for ''{0}'' from secure store
-SecureStoreUtils_errorReadingCredentials=Failed to read credentials for ''{0}'' from secure store
-SecureStoreUtils_writingCredentialsFailed=Failed to write credentials for ''{0}'' to secure store
+SecureStoreUtils_writingCredentialsFailed=Writing to secure store failed
 SelectResetTypePage_labelCurrentHead=Current HEAD:
 SelectResetTypePage_labelResettingTo=Resetting to:
 SelectResetTypePage_PageMessage=Select the type of reset to perform
@@ -103,6 +101,8 @@ GerritConfigurationPage_pushUri=&Push URI
 GerritConfigurationPage_title=Gerrit Configuration
 GerritConfigurationPage_UserLabel=&User:
 
+EGitCredentialsProvider_errorReadingCredentials=Failed reading credentials from secure store
+EGitCredentialsProvider_FailedToClearCredentials=Failed to clear credentials for {0} stored in secure store
 EGitCredentialsProvider_question=Question
 EGitCredentialsProvider_information=Information
 CustomPromptDialog_provide_information_for=Provide information for {0}
@@ -646,7 +646,7 @@ ResetTargetSelectionDialog_AuthorLabel=Author:
 ResetTargetSelectionDialog_CommitLabel=Commit:
 ResetTargetSelectionDialog_CommitterLabel=Committer:
 ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' state.
-ResetTargetSelectionDialog_ExpressionLabel=Reset to (&expression):
+ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
 ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
@@ -736,7 +736,7 @@ PushBranchPage_RemoteBranchNameLabel=Branch:
 PushBranchPage_ChooseBranchNameError=Choose to which branch in remote ''{0}'' you want to push.
 PushBranchPage_ForceUpdateButton=&Force overwrite branch in remote if it exists and has diverged
 PushBranchPage_InvalidBranchNameError=Invalid branch name.
-PushBranchPage_NewRemoteButton=New &Remote...
+PushBranchPage_NewRemoteButton=&New Remote...
 PushBranchPage_PageMessage=Select a remote and the name the branch should have in the remote.
 PushBranchPage_PageName=Simple Push
 PushBranchPage_PageTitle=Push to branch in remote
@@ -1045,7 +1045,6 @@ CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
 CommittingPreferencePage_autoStageDeletion=Automatically stage files being deleted
-CommittingPreferencePage_autoStageMoves=Automatically stage files being moved
 CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
 CommittingPreferencePage_general=General
 
@@ -1494,8 +1493,6 @@ StashEditorPage_LabelParent0=HEAD:
 StashEditorPage_LabelParent1=Index:
 StashEditorPage_LabelParent2=Untracked:
 
-MultiPageEditorContentOutlinePage_NoOutline=An outline is not available.
-
 Header_contextMenu_copy=&Copy
 Header_contextMenu_copy_SHA1=Copy &SHA-1
 Header_copy_SHA1_error_title= Problem Copying SHA-1 to Clipboard
@@ -1522,19 +1519,15 @@ MultiPullResultDialog_WindowTitle=Pull Result for Multiple Repositories
 CommitFileDiffViewer_CanNotOpenCompareEditorTitle=Cannot Open Compare Editor
 CommitFileDiffViewer_CompareMenuLabel=Compare with Previous &Version
 CommitFileDiffViewer_CompareWorkingDirectoryMenuLabel=Compare with &Working Tree
+CommitFileDiffViewer_FileDoesNotExist=File {0} does not exist in the workspace
 CommitFileDiffViewer_MergeCommitMultiAncestorMessage=This is a merge commit with more than one ancestor
+CommitFileDiffViewer_notContainedInCommit=File {0} is not contained in commit {1}
 CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
 CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Working Tree Version
 StagingView_CompareWithIndexMenuLabel=Compare with Index
 CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Revision Information
 CommitFileDiffViewer_ShowInHistoryLabel=Focus On This File
-DiffViewer_FileDoesNotExist=File {0} does not exist in the workspace
-DiffViewer_OpenComparisonLinkLabel=Open Side-by-Side Comparison
-DiffViewer_OpenWorkingTreeLinkLabel=Open Working Tree Version
-DiffViewer_OpenInEditorLinkLabel=Open This Version
-DiffViewer_OpenPreviousLinkLabel=Open Previous Version
-DiffViewer_notContainedInCommit=File {0} is not contained in commit {1}
 CommitGraphTable_CommitId=Id
 CommitGraphTable_Committer=Committer
 CommitGraphTable_committerDataColumn=Committed Date
