--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -74,7 +74,9 @@ WizardProjectsImportPage_projectsInWorkspace = Some or all projects cannot be im
 WizardProjectsImportPage_CreateProjectsTask = Creating Projects
 WizardProjectsImportPage_filterText = type filter text to filter unselected projects
 
-SecureStoreUtils_writingCredentialsFailed=Writing to secure store failed
+SecureStoreUtils_errorClearingCredentials=Failed to clear credentials for ''{0}'' from secure store
+SecureStoreUtils_errorReadingCredentials=Failed to read credentials for ''{0}'' from secure store
+SecureStoreUtils_writingCredentialsFailed=Failed to write credentials for ''{0}'' to secure store
 SelectResetTypePage_labelCurrentHead=Current HEAD:
 SelectResetTypePage_labelResettingTo=Resetting to:
 SelectResetTypePage_PageMessage=Select the type of reset to perform
@@ -101,8 +103,6 @@ GerritConfigurationPage_pushUri=&Push URI
 GerritConfigurationPage_title=Gerrit Configuration
 GerritConfigurationPage_UserLabel=&User:
 
-EGitCredentialsProvider_errorReadingCredentials=Failed reading credentials from secure store
-EGitCredentialsProvider_FailedToClearCredentials=Failed to clear credentials for {0} stored in secure store
 EGitCredentialsProvider_question=Question
 EGitCredentialsProvider_information=Information
 CustomPromptDialog_provide_information_for=Provide information for {0}
@@ -1045,7 +1045,6 @@ CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
 CommittingPreferencePage_autoStageDeletion=Automatically stage files being deleted
-CommittingPreferencePage_autoStageMoves=Automatically stage files being moved
 CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
 CommittingPreferencePage_general=General
 
