First commited as after_86337_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -444,7 +444,7 @@ RepositoryRemotePropertySource_RemotePushUrl_label=Remote Push URL
 
 RepositorySearchDialog_AddGitRepositories=Add Git Repositories
 RepositorySearchDialog_DeepSearch_button=&Look for nested repositories
-RepositorySearchDialog_RepositoriesFound_message={0} Git repositories found...
+RepositorySearchDialog_RepositoriesFound_message={0} repositories found...\t{1}
 RepositorySearchDialog_ScanningForRepositories_message=Searching
 RepositorySearchDialog_Search=&Search
 RepositorySearchDialog_SearchCriteriaGroup=Search criteria
