--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -74,7 +74,9 @@ WizardProjectsImportPage_projectsInWorkspace = Some or all projects cannot be im
 WizardProjectsImportPage_CreateProjectsTask = Creating Projects
 WizardProjectsImportPage_filterText = type filter text to filter unselected projects
 
-SecureStoreUtils_writingCredentialsFailed=Writing to secure store failed
+SecureStoreUtils_errorClearingCredentials=Failed to clear credentials for ''{0}'' from secure store
+SecureStoreUtils_errorReadingCredentials=Failed to read credentials for ''{0}'' from secure store
+SecureStoreUtils_writingCredentialsFailed=Failed to write credentials for ''{0}'' to secure store
 SelectResetTypePage_labelCurrentHead=Current HEAD:
 SelectResetTypePage_labelResettingTo=Resetting to:
 SelectResetTypePage_PageMessage=Select the type of reset to perform
@@ -101,8 +103,6 @@ GerritConfigurationPage_pushUri=&Push URI
 GerritConfigurationPage_title=Gerrit Configuration
 GerritConfigurationPage_UserLabel=&User:
 
-EGitCredentialsProvider_errorReadingCredentials=Failed reading credentials from secure store
-EGitCredentialsProvider_FailedToClearCredentials=Failed to clear credentials for {0} stored in secure store
 EGitCredentialsProvider_question=Question
 EGitCredentialsProvider_information=Information
 CustomPromptDialog_provide_information_for=Provide information for {0}
@@ -444,7 +444,7 @@ RepositoryRemotePropertySource_RemotePushUrl_label=Remote Push URL
 
 RepositorySearchDialog_AddGitRepositories=Add Git Repositories
 RepositorySearchDialog_DeepSearch_button=&Look for nested repositories
-RepositorySearchDialog_RepositoriesFound_message={0} repositories found...\t{1}
+RepositorySearchDialog_RepositoriesFound_message={0} Git repositories found...
 RepositorySearchDialog_ScanningForRepositories_message=Searching
 RepositorySearchDialog_Search=&Search
 RepositorySearchDialog_SearchCriteriaGroup=Search criteria
@@ -736,7 +736,7 @@ PushBranchPage_RemoteBranchNameLabel=Branch:
 PushBranchPage_ChooseBranchNameError=Choose to which branch in remote ''{0}'' you want to push.
 PushBranchPage_ForceUpdateButton=&Force overwrite branch in remote if it exists and has diverged
 PushBranchPage_InvalidBranchNameError=Invalid branch name.
-PushBranchPage_NewRemoteButton=&New Remote...
+PushBranchPage_NewRemoteButton=New &Remote...
 PushBranchPage_PageMessage=Select a remote and the name the branch should have in the remote.
 PushBranchPage_PageName=Simple Push
 PushBranchPage_PageTitle=Push to branch in remote
@@ -1044,6 +1044,8 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
+CommittingPreferencePage_autoStageDeletion=Automatically stage files being deleted
+CommittingPreferencePage_autoStageMoves=Automatically stage files being moved
 CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
 CommittingPreferencePage_general=General
 
@@ -1491,6 +1493,8 @@ StashEditorPage_StagedChanges=Staged Changes ({0})
 StashEditorPage_LabelParent0=HEAD:
 StashEditorPage_LabelParent1=Index:
 StashEditorPage_LabelParent2=Untracked:
+
+MultiPageEditorContentOutlinePage_NoOutline=An outline is not available.
 
 Header_contextMenu_copy=&Copy
 Header_contextMenu_copy_SHA1=Copy &SHA-1
