First commited as after_86419_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -646,7 +646,7 @@ ResetTargetSelectionDialog_AuthorLabel=Author:
 ResetTargetSelectionDialog_CommitLabel=Commit:
 ResetTargetSelectionDialog_CommitterLabel=Committer:
 ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' state.
-ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
+ResetTargetSelectionDialog_ExpressionLabel=Reset to (&expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
 ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
