First commited as after_86923_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1492,6 +1492,8 @@ StashEditorPage_LabelParent0=HEAD:
 StashEditorPage_LabelParent1=Index:
 StashEditorPage_LabelParent2=Untracked:
 
+MultiPageEditorContentOutlinePage_NoOutline=An outline is not available.
+
 Header_contextMenu_copy=&Copy
 Header_contextMenu_copy_SHA1=Copy &SHA-1
 Header_copy_SHA1_error_title= Problem Copying SHA-1 to Clipboard
