First commited as after_87040_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -736,7 +736,7 @@ PushBranchPage_RemoteBranchNameLabel=Branch:
 PushBranchPage_ChooseBranchNameError=Choose to which branch in remote ''{0}'' you want to push.
 PushBranchPage_ForceUpdateButton=&Force overwrite branch in remote if it exists and has diverged
 PushBranchPage_InvalidBranchNameError=Invalid branch name.
-PushBranchPage_NewRemoteButton=&New Remote...
+PushBranchPage_NewRemoteButton=New &Remote...
 PushBranchPage_PageMessage=Select a remote and the name the branch should have in the remote.
 PushBranchPage_PageName=Simple Push
 PushBranchPage_PageTitle=Push to branch in remote
