First commited as after_87768_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1291,6 +1291,7 @@ DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
 DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
+DiffEditorPage_ToggleLineNumbers=Use Old/New &Line Numbers
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
 DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
