First commited as after_87844_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -92,7 +92,8 @@ ShowBlameHandler_JobName=Computing Revision Information
 GenerateHistoryJob_errorComputingHistory=Cannot compute Git history.
 GenerateHistoryJob_taskFoundMultipleCommits=Found {0} commits
 GenerateHistoryJob_taskFoundSingleCommit=Found 1 commit
-GerritConfigurationPage_BranchTooltipHover=Press {0} to see a filtered list of branch names
+GerritConfigurationPage_BranchTooltipHover=Press {0} or start typing to see a filtered list of branch names
+GerritConfigurationPage_BranchTooltipStartTyping=Start typing to see a filtered list of branch names
 GerritConfigurationPage_ConfigureFetchReviewNotes=Fetch will be auto-configured to fetch review notes from Gerrit.
 GerritConfigurationPage_errorBranchName=Branch name is required
 GerritConfigurationPage_groupFetch=Fetch configuration
@@ -913,7 +914,8 @@ PushTagsPage_TagsLabelNoneSelected=Tags:
 PushTagsPage_TagsLabelSelected=Tags ({0} selected):
 PushTagsWizard_WindowTitle=Push Tags
 PushToGerritPage_BranchLabel=Gerrit &Branch:
-PushToGerritPage_ContentProposalHoverText=Press {0} to see a filtered list of branch names
+PushToGerritPage_ContentProposalHoverText=Press {0} or start typing to see a filtered list of branch names
+PushToGerritPage_ContentProposalStartTypingText=Start typing to see a filtered list of branch names
 PushToGerritPage_Message=Select a Gerrit URI and branch name
 PushToGerritPage_MissingBranchMessage=Select a branch
 PushToGerritPage_MissingUriMessage=Select a URI
