First commited as before_87848_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -92,8 +92,7 @@ ShowBlameHandler_JobName=Computing Revision Information
 GenerateHistoryJob_errorComputingHistory=Cannot compute Git history.
 GenerateHistoryJob_taskFoundMultipleCommits=Found {0} commits
 GenerateHistoryJob_taskFoundSingleCommit=Found 1 commit
-GerritConfigurationPage_BranchTooltipHover=Press {0} or start typing to see a filtered list of branch names
-GerritConfigurationPage_BranchTooltipStartTyping=Start typing to see a filtered list of branch names
+GerritConfigurationPage_BranchTooltipHover=Press {0} to see a filtered list of branch names
 GerritConfigurationPage_ConfigureFetchReviewNotes=Fetch will be auto-configured to fetch review notes from Gerrit.
 GerritConfigurationPage_errorBranchName=Branch name is required
 GerritConfigurationPage_groupFetch=Fetch configuration
@@ -914,8 +913,7 @@ PushTagsPage_TagsLabelNoneSelected=Tags:
 PushTagsPage_TagsLabelSelected=Tags ({0} selected):
 PushTagsWizard_WindowTitle=Push Tags
 PushToGerritPage_BranchLabel=Gerrit &Branch:
-PushToGerritPage_ContentProposalHoverText=Press {0} or start typing to see a filtered list of branch names
-PushToGerritPage_ContentProposalStartTypingText=Start typing to see a filtered list of branch names
+PushToGerritPage_ContentProposalHoverText=Press {0} to see a filtered list of branch names
 PushToGerritPage_Message=Select a Gerrit URI and branch name
 PushToGerritPage_MissingBranchMessage=Select a branch
 PushToGerritPage_MissingUriMessage=Select a URI
@@ -1293,8 +1291,6 @@ DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
 DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
-DiffEditorPage_ToggleLineNumbers=Use Old/New &Line Numbers
-DiffEditorPage_WarningNoDiffForMerge=Cannot compute diff for a merge commit.
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
 DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
